# ubuntu-touch-simple-gps

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  simplegps.desktop.in  ubuntu-touch-simple-gps.qml
app/tests/autopilot/: run
app/tests/autopilot/ubuntu-touch-simple-gps/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/Simplegps/: backend.cpp  backend.h  gpsdataprovider.cpp  gpsdataprovider.h  gpslocationview.cpp  gpslocationview.h  gpssnrview.cpp  gpssnrview.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: ubuntu-touch-simple-gps.sturmflut.pot
